# Files-Lib

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TestFiles  cmake_install.cmake
libs/: Strings.h
libs/Linked List/: LinkedList.c
libs/Strings/: Strings.c
src/: Files.c
tests/: tests.c
tests/files/: file_1.txt  saved_file.txt
